trunk/Archive2/ea/56f4f86290d128/output
main.cpp:1:18: error: 'struct X' is not a valid type for a template non-type parameter
 template <struct X> struct Y {};
                  ^
